1999-12-05  Jochen Wiedmann  <joe@ispsoft.de> (0.2008)

	* lib/HTML/EP.pm (_ep_set): Added "noparse" attribute.

1999-11-25  Jochen Wiedmann  <joe@ispsoft.de>

	* Added lib/HTML/EP/CGIEncryptForm.pm, contributed by
         Peter Marelas <maral@phase-one.com.au>.

1999-11-17  Jochen Wiedmann  <joe@ispsoft.de> (0.2007)

	* lib/HTML/EP.pm (_ep_set): Fixed bugs in multiline ep-set,
	  ep-query and ep-mail.

1999-11-17  Jochen Wiedmann  <joe@ispsoft.de> (0.2006)

	* lib/HTML/EP.pm (_ep_list): Ranges like 1..5,7..9 are now
	  allowed.
	* lib/HTML/EP.pm (_ep_list): One can now use list="session->item"
	  rather than the simple list="item". Jason McMullan <jmcc@ontv.com>.

1999-11-08  Jochen Wiedmann  <joe@ispsoft.de> (0.2005)

	* Added $self->escapeHTML() in favour of
	  HTML::Entities::encode_entities.

1999-11-08  Jochen Wiedmann  <joe@ispsoft.de> (0.2004)

	* lib/HTML/EP.pm (EncodeByAttr): Fixed a bug in HTML output
	  ("= ~" instead of "=~")

1999-09-28  Jochen Wiedmann  <joe@ispsoft.de> (0.20_02)

	* Added hints for installation with IIS.
	* ep.cgi.PL: $ARGV[0] is now setting $ENV{'PATH_TRANSLATED'}
	  for use with IIS.
	* lib/HTML/EP.pm: ep-elseif may now be called as ep-elsif
	  Jason McMullan <jmcc@ontv.com>.
	* lib/HTML/EP.pm: ep-package may now be called many times;
	  $self is blessed into a new package that inherits from all.
	  Suggested by Jason McMullan <jmcc@ontv.com>.

1999-09-27  Jochen Wiedmann  <joe@ispsoft.de> (0.20_01)

	* Makefile.PL: Fixed a missing "require Data::Dumper".

1999-09-24  Jochen Wiedmann  <joe@ispsoft.de> (0.20_00)

	* Merged in patches of Jason McMullan (jmcc@ontv.com) for
	  nested ep-list. A major update!
	* Replaced URI::Escape::uri_escape with CGI->escape

1999-09-19  Jochen Wiedmann  <joe@ispsoft.de> (0.1135)

	* lib/HTML/EP.pm (_ep_input): Added handling of NULL dates.
	* lib/HTML/EP.pm: Added ep-input-sql-query.

1999-08-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1134)
  